--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-  <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -995,6 +995,15 @@
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
+    <!-- START Bootstrap-Cookie-Alert -->
+<div class="alert text-center cookiealert cookie-banner" role="alert">
+    <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
+
+    <button id="accept-cookies" type="button" class="btn btn-primary btn-sm acceptcookies">
+        I agree
+    </button>
+</div>
+<!-- END Bootstrap-Cookie-Alert -->
 
     <!-- JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.js"></script>
@@ -1008,10 +1017,13 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-   <script src="js/main.js"></script>
-   
-<script src="js/cookie-consent.js"></script>
- 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+    <script src="js/cookie-consent.js"></script>
+   <!--
+<script src="js/cookie-consent.js"></script>-->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="js/custom.js"></script>
 
 <script>
@@ -1020,17 +1032,14 @@
     autoShowDialog: true, // disable autoShowModal on the privacy policy and legal notice pages, to make these pages readable
     lang: navigator.language, // the language, in which the modal is shown
     languages: [ "de"], // supported languages (in ./content/), defaults to first in array
-    contentURL: "/content", // this URL must contain the dialogs content in the needed languages
+    contentURL: "content", // this URL must contain the dialogs content in the needed languages
     cookieName: "cookie-consent-settings",  // the name of the cookie in which the configuration is stored as JSON
     cookieStorageDays: 365, // the duration the cookie configuration is stored on the client
-    postSelectionCallback: getScript // callback function, called after the user has made his selection
+    postSelectionCallback: undefined // callback function, called after the user has made his selection
 }
 var cookieSettings = new BootstrapCookieConsentSettings(props)
-   // cookieSettings.showDialog();
-
-function getScript() {  
-   var cookies = cookieSettings.getSettings();
-    if(cookies.analyses){
+    cookieSettings.showDialog();
+    function getScript() {
   let script = document.createElement( 'script' );
   script.type = 'text/javascript';
   script.src = "https://www.googletagmanager.com/gtag/js?id=G-6YMRPBDDN1";
@@ -1040,10 +1049,6 @@ function getScript() {
   document.head.appendChild(script2);
  
   console.log('getScript executed');
-}else  {
-    console.log('getScript not executed')
-  }
-
 }
 
 let button = document.getElementById('accept-cookies');
