--- a/delete.html
+++ b/delete.html
@@ -32,7 +32,7 @@
 <body>
 <div class="container-xxl position-relative p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-        <a href="" class="navbar-brand p-0">
+        <a href="index.html" class="navbar-brand p-0">
             <!--<h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Restoran</h1>-->
             <img src="img/oishii-logo.png" alt="Logo">
         </a>
@@ -146,7 +146,7 @@
 <script src="js/main.js"></script>
 
 <script>
-    const BASE_URL = "http://localhost:8080/api/GuestUserService/noAuth"
+    const BASE_URL = "https://server.gaikai.xyz:8888/api/GuestUserService/noAuth"
     function deleteEmail() {
         "use strict";
         let $emailform = document.getElementById('emailForm');
