changed phone number and agb anchro tag in reservation formular

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                         <label for="commentFromUser">Besonderer Wunsch</label>
                                     </div>
                                 </div>
-                                <p style="font-weight: bolder; margin-top: 6%"> <input type="checkbox" id="agbCheck" onclick="makeReservationVisible()"> Ich stimme den AGB und dem Datenschutz zu</p>
+                                <p style="font-weight: bolder; margin-top: 6%"> <input type="checkbox" id="agbCheck" onclick="makeReservationVisible()"> Ich stimme den <a href=datenschutz.html">AGB</a> und dem Datenschutz zu</p>
                                 <p style="font-weight: bolder; margin-top: 1%"> <input type="checkbox"> Ich möchte kostenlose Gutscheine per E-Mail erhalten </p>
                                 <div class="col-12">
                                     <button id="reservationButton" style="display: none;" class="btn btn-primary w-100 py-3" type="submit"  onclick="makeReservation()">Jetzt Reservieren</button>
@@ -949,7 +949,7 @@
                     <div class="col-lg-4 col-md-6">
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Kontakt</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Wilhelmstraße 58a, 65183 Wiesbaden</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i></p>
+                        <a class="mb-2" href="tel:+4961123835808"><i class="fa fa-phone-alt me-3"></i>0611-23835808</a>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>kontakt@oishii-wiesbaden.de</p>
                     </div>
                     <div id="newsletter" class="col-lg-4 col-md-6">
