changed phone number and agb anchro tag in reservation formular

--- a/index.html
+++ b/index.html
@@ -211,10 +211,9 @@
                                 <img class="img-fluid" src="img/team-1.jpg" alt="">
                             </div>
                             <h5 class="mb-0">Lunch</h5>
-                            <h5>Mo.-Do.: 16,90€ Fr.-So. & Feiertags: 18,90€</h5>
+                            <h5>18,90€</h5>
                             <div class="d-flex justify-content-center mt-3">
-                                <p>Mo.-Fr. 12-15 Uhr / Küche bis 14:30 Uhr</p><br>
-                                <p>Sa., So. & Feiertags 12-16 Uhr / Küche bis 16 Uhr</p>
+                                <p> Freitag-Sonntag: 12:00-16:30 Uhr </p><br>
                             </div>
                         </div>
                     </div>
@@ -226,11 +225,7 @@
                             <h5 class="mb-0">Dinner</h5>
                             <h5>28,90€</h5>
                             <div class="d-flex justify-content-center mt-3">
-                              <p>Fr. 17:30-24 Uhr / Küche bis 23:30 Uhr</p>
-                              <br>
-                              <p>Sa., Feiertags 16-24 Uhr / Küche bis 23:30 Uhr</p>
-                              <br>
-                              <p>So. 16-23:30 Uhr / Küche bis 23 Uhr</p>
+                              <p>Montag-Sonntag 16:30-24:00 Uhr </p>
                         </div>
                         </div>
                     </div>
@@ -241,9 +236,7 @@
                             </div>
                             <h5 class="mb-0">Kinder (4-12 Jahre)</h5>
                             <div class="d-flex justify-content-center mt-3">
-                                <p>Lunch Mo.-Do. 9,50€ </p>
-                                <br>
-                                <p>Lunch Fr.-So., Feiertags 10,95€</p></p>
+                                <p>Lunch 10,95€     </p>
                                 <br>
                                 <p>Dinner 15,90€</p>
                             </div>
