--- a/index.html
+++ b/index.html
@@ -207,31 +207,26 @@
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="team-item text-center rounded overflow-hidden">
+                    <div class="team-item text-center rounded">
                         <div class="rounded-circle overflow-hidden m-4">
                             <img class="img-fluid" src="img/team-1.jpg" alt="">
                         </div>
                         <h5 class="mb-0">Lunch</h5>
                         <h5>18,90€</h5>
-                        <div class="d-flex justify-content-center mt-3">
-                            <p> Freitag-Sonntag: 12:00-16:30 Uhr </p><br>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item text-center rounded overflow-hidden">
+                    <div class="team-item text-center rounded ">
                         <div class="rounded-circle overflow-hidden m-4">
                             <img class="img-fluid" src="img/team-2.jpg" alt="">
                         </div>
                         <h5 class="mb-0">Dinner</h5>
                         <h5>28,90€</h5>
-                        <div class="d-flex justify-content-center mt-3">
-                            <p>Montag-Sonntag 16:30-24:00 Uhr </p>
-                        </div>
+                        <br>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp " data-wow-delay="0.5s">
-                    <div class="team-item text-center rounded overflow-hidden">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item text-center rounded ">
                         <div class="rounded-circle overflow-hidden m-4">
                             <img class="img-fluid" src="img/team-3.jpg" alt="">
                         </div>
