changed hour of eating and age of kids

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-hourglass text-primary mb-4"></i>
-                            <h5>2,5h</h5>
-                            <p>Aus unserere Karte bestellen</p>
+                            <h5>2 Stunden</h5>
+                            <p>Aus unsere Karte bestellen</p>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         <div class="rounded-circle overflow-hidden m-4">
                             <img class="img-fluid" src="img/team-3.jpg" alt="">
                         </div>
-                        <h6 class="mb-0">Kinder (4-12 Jahre)</h6>
+                        <h6 class="mb-0">Kinder (4-11 Jahre)</h6>
                         <h6 class="mb-0">Lunch 10,95€</h6>
                         <h6 class="mb-0">Dinner 15,90€</h6>
                     </div>
