--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <a href="#menu" class="nav-item nav-link">Speisekarte</a>
                     <a href="#menu-drink" class="nav-item nav-link">Getränkekarte</a>
                     <a href="#openeningHours" class="nav-item nav-link">Öffnungszeiten</a>
+                    <a href="application.html" class="nav-item nav-link">Jobs</a>
                     <!--   <div class="nav-item dropdown">
                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                            <div class="dropdown-menu m-0">
@@ -932,6 +933,14 @@
     </div>
     <!-- Testimonial End -->
 
+    <!-- Openening Hours Start -->
+    <div id="application" class="container-xxl pt-5 pb-3">
+        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Job gefällig?</h5>
+            <h1 class="mb-5">Gucke dir unsere offenen Stellen an</h1>
+            <a href="apllication" style="font-size: 2em">Klicke hier </a>
+        </div>
+    </div>
 
     <!-- Footer Start -->
     <div id="impressum" class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
