--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h5 class="section-title ff-secondary text-center text-primary fw-normal">Job gefällig?</h5>
             <h1 class="mb-5">Gucke dir unsere offenen Stellen an</h1>
-            <a href="apllication" style="font-size: 2em">Klicke hier </a>
+            <a href="application.html" style="font-size: 2em">Klicke hier </a>
         </div>
     </div>
 
