on Blur does not work on mobile

--- a/index.html
+++ b/index.html
@@ -287,37 +287,37 @@
                 <div id="reservationForm" class="row g-3">
                     <div class="col-md-6">
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="firstName" placeholder="Vorname" onblur="makeReservationVisible()">
+                            <input type="text" class="form-control" id="firstName" placeholder="Vorname" onclick="makeReservationVisible()">
                             <label for="firstname">Vorname</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="lastName" placeholder="Nachname"  onblur="makeReservationVisible()">
+                            <input type="text" class="form-control" id="lastName" placeholder="Nachname"  onclick="makeReservationVisible()">
                             <label for="lastName">Nachname</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
-                            <input type="number" class="form-control" id="numberOfKids" placeholder="0"  onblur="makeReservationVisible()">
+                            <input type="number" class="form-control" id="numberOfKids" placeholder="0"  onclick="makeReservationVisible()">
                             <label for="numberOfKids">Anzahl Kinder (unter 11 Jahren)</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
-                            <input type="number" class="form-control" id="numberOfPeople" placeholder="0" onblur="makeReservationVisible()">
+                            <input type="number" class="form-control" id="numberOfPeople" placeholder="0" onclick="makeReservationVisible()">
                             <label for="numberOfPeople">Anzahl Erwachsene</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating">
-                            <input type="email" class="form-control" id="eMail" placeholder="Email" onblur="makeReservationVisible()">
+                            <input type="email" class="form-control" id="eMail" placeholder="Email" onclick="makeReservationVisible()">
                             <label for="eMail">Email</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating date">
-                            <input type="datetime-local" class="form-control datetimepicker-input" id="dateTimeReservation"  placeholder="Bitte wählen Sie das Datum und die Uhrzeit aus" onblur="makeReservationVisible()">
+                            <input type="datetime-local" class="form-control datetimepicker-input" id="dateTimeReservation"  placeholder="Bitte wählen Sie das Datum und die Uhrzeit aus" >
                             <label for="dateTimeReservation">Datum & Uhrzeit</label>
                         </div>
                     </div>
