--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         <p id="invalidTimeSign"class="ff-secondary text-primary fw-normal" style="display:none;">Die angegeben Zeit ist ungültig. Bitte lesen Sie unsere Öffnungszeiten nochmal durch und vergewissern Sie sich, dass Sie ein korrektes Datum und eine gültige Uhrzeit angeben</p>
                     </div>
                     <div class="col-12">
-                        <p id="invalidInformation"class="ff-secondary text-primary fw-normal" style="display:none;">Wir brauchen mehr Informationen. E-Mail, Name, Vorname und die Anzahl der Personen. Wenn sie zudem nicht die AGB's  akzeptiert haben, kann auch keine Reservierung getätigt werden</p>
+                        <p id="invalidInformation"class="ff-secondary text-primary fw-normal" style="display:none;">Ihre Angaben sin unvollständig. Zu den Pflichtangaben gehören: E-Mail, Telefonnummer, Name, Vorname, Anzahl der Personen. Außerdem müssen Sie die AGBs akzeptieren damit eine Reservierung erfolgen kann.</p>
                     </div>
                     <p style="font-weight: bolder; margin-top: 6%"> <input  type="checkbox" id="agbCheck"> Ich stimme den <a href=datenschutz.html">AGB</a> und dem Datenschutz zu</p>
                     <p style="font-weight: bolder; margin-top: 1%"> <input type="checkbox"> Ich möchte kostenlose Gutscheine per E-Mail erhalten </p>
