--- a/changeRes.html
+++ b/changeRes.html
@@ -242,7 +242,7 @@
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
 <script>
-     const BASE_URL = "http://localhost:8888"
+     const BASE_URL =  "https://server.gaikai.xyz:8888/api/GuestUserService/noAuth";
      const queryString = window.location.search;
     const urlParams = new URLSearchParams(queryString);
      const email = urlParams.get('email');
