[GK-313]Change Reservation -added edit Reservation -fixed false BASE URL -added cancel Reservation

--- a/edit_reservation.html
+++ b/edit_reservation.html
@@ -242,7 +242,7 @@
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
 <script>
-    const BASE_URL =  "http://localhost:8888/api/GuestUserService/noAuth";
+    const BASE_URL =  "http://localhost:8888";
     const queryString = window.location.search;
     const urlParams = new URLSearchParams(queryString);
     const email = urlParams.get('email');
