edit and cancel rs, with feedback

--- a/index.html
+++ b/index.html
@@ -333,6 +333,21 @@
                             <label for="commentFromUser">Besonderer Wunsch</label>
                         </div>
                     </div>
+                    <div class="col-md">
+                        <div class="form-floating">
+                            <input type="checkbox" id="isBirthday"> <span>Geburtstag</span>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-floating">
+                            <input type="checkbox" id="isRomanticDate"> <span>Romantisches Date</span>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-floating">
+                            <input type="checkbox" id="isWindowSeat"> <span>Fensterplatz</span>
+                        </div>
+                    </div>
                     <div class="col-12">
                         <p id="invalidTimeSign"class="ff-secondary text-primary fw-normal" style="display:none;">Die angegeben Zeit ist ungültig. Bitte lesen Sie unsere Öffnungszeiten nochmal durch und vergewissern Sie sich, dass Sie ein korrektes Datum und eine gültige Uhrzeit angeben</p>
                     </div>
