--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
 <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 <script src="js/main.js"></script>
-
+<script src="js/custom.js"></script>
 <script src="js/cookie-consent.js"></script>
 
 
