--- a/index.html
+++ b/index.html
@@ -1043,8 +1043,8 @@
 <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/custom.js"></script>
+<script type="module" src="js/cookies.js"></script>
 <script src="js/cookie-consent.js"></script>
-
 
 
 <!--<script type="text/javascript" id="cookiebanner"
