Added Picture and Label

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item text-center rounded ">
                         <div class="rounded-circle overflow-hidden m-4">
-                            <img class="img-fluid" src="../yantseSite/img/team/team-3.jpg" alt="">
+                            <img class="img-fluid" src="img/team-3.jpg" alt="">
                         </div>
                         <h6 class="mb-0">Kinder (4-11 Jahre)</h6>
                         <h6 class="mb-0">Lunch 10,95€</h6>
@@ -359,10 +359,10 @@
                         <p id="invalidInformation"class="ff-secondary text-primary fw-normal" style="display:none;">Ihre Angaben sind unvollständig. Zu den Pflichtangaben gehören: E-Mail, Telefonnummer, Name, Vorname, Anzahl der Personen. Außerdem müssen Sie die AGBs akzeptieren damit eine Reservierung erfolgen kann.</p>
                     </div>
                     <p style="font-weight: bolder; margin-top: 6%"> <input  type="checkbox" id="agbCheck"> Ich stimme den <a href=datenschutz.html>AGB</a> und dem Datenschutz zu</p>
-                    <label for="agbCheck">AGB akzeptieren</label>
+                    <label class="d-none" for="agbCheck">AGB akzeptieren</label>
                     <p style="font-weight: bolder; margin-top: 1%">
                         <input id=coupons type="checkbox"> Ich möchte kostenlose Gutscheine per E-Mail erhalten </p>
-                    <label for="coupons">Kostenlose Coupons</label>
+                    <label  class="d-none" for="coupons">Kostenlose Coupons</label>
 
                     <div class="col-12">
                         <button id="reservationButton" class="btn btn-primary w-100 py-3" type="submit" onclick="makeReservation()">Jetzt Reservieren</button>
