made labe invisible and removed unnecessary header options

--- a/index.html
+++ b/index.html
@@ -58,23 +58,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0 pe-4">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="#about" class="nav-item nav-link">About</a>
+                    <a href="#about" class="nav-item nav-link">Über uns</a>
                     <a href="#rules" class="nav-item nav-link">Die Regeln</a>
                     <a href="#price" class="nav-item nav-link">Preise</a>
                     <a href="#menu" class="nav-item nav-link">Speisekarte</a>
                     <a href="#menu-drink" class="nav-item nav-link">Getränkekarte</a>
                     <a href="#openeningHours" class="nav-item nav-link">Öffnungszeiten</a>
                     <a href="application.html" class="nav-item nav-link">Jobs</a>
-                    <!--   <div class="nav-item dropdown">
-                           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                           <div class="dropdown-menu m-0">
-                               <a href="booking.html" class="dropdown-item">Booking</a>
-                               <a href="team.html" class="dropdown-item">Our Team</a>
-                               <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                           </div>
-                       </div>-->
-                    <a href="#impressum" class="nav-item nav-link">Impressum</a>
+
                 </div>
                 <a href="#reservation" class="btn btn-primary py-2 px-4">Reservieren</a>
             </div>
@@ -337,19 +328,19 @@
                     <div class="col-md">
                         <div class="form-floating">
                             <input type="checkbox" id="isBirthday"> <span>Geburtstag</span>
-                            <label for="isBirthday">Geburtstag</label>
+                            <label class="d-none" for="isBirthday">Geburtstag</label>
                         </div>
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
                             <input type="checkbox" id="isRomanticDate"> <span>Romantisches Date</span>
-                            <label for="isRomanticDate">Romantic Date</label>
+                            <label class="d-none" for="isRomanticDate">Romantic Date</label>
                         </div>
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
                             <input type="checkbox" id="isWindowSeat"> <span>Fensterplatz</span>
-                            <label for="isWindowSeat">Fenster Platz</label>
+                            <label class="d-none" for="isWindowSeat">Fenster Platz</label>
                         </div>
                     </div>
                     <div class="col-12">
