added bigger Box for Comment

--- a/index.html
+++ b/index.html
@@ -313,16 +313,15 @@
                             <label for="dateTimeReservation">Datum & Uhrzeit</label>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="row-cols-auto">
                         <div class="form-floating">
                             <input type="text" class="form-control" id="phoneNumber"  placeholder="Telefonnummer" />
                             <label for="phoneNumber">Telefonnummer</label>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="row-cols-auto mt-3">
                         <div class="form-floating">
-                            <input type="text" class="form-control" id="commentFromUser" placeholder="Besonderer Wunsch" />
-                            <label for="commentFromUser">Besonderer Wunsch</label>
+                            <textarea class="w-100" name="comment" rows="4" cols="20" placeholder="Besonderer Wunsch" id="commentFromUser"></textarea>
                         </div>
                     </div>
                     <div class="col-md">
