--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
         <h5 class="section-title ff-secondary text-center text-primary fw-normal">Wann haben wir geöffnet?</h5>
         <h1 class="mb-5">Öffnungszeiten</h1>
-        <h5>Montag bis Donnerstag: 16:30-22:30 </h5>
-        <h5>Freitag: 12:30-14:30 17:30-23:00</h5>
-        <h5>Samstag bis Sonntag: 12:30-23:30</h5>
+        <h5>Montag bis Donnerstag: <strong>16:30-22:30</strong> </h5>
+        <h5>Freitag: <strong>12:30-14:30 17:30-23:00</strong></h5>
+        <h5>Samstag bis Sonntag: <strong>12:30-23:30</strong></h5>
     </div>
 </div>
 
