--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
         <h5>Montag bis Donnerstag: <strong>16:30-22:30</strong> </h5>
         <h5>Freitag: <strong>12:30-14:30 17:30-23:00</strong></h5>
         <h5>Samstag bis Sonntag: <strong>12:30-23:30</strong></h5>
+        <br>
+        <h5 class="red-text">Heiligabend haben wir geschlossen </h5>
+        <h5 class="red-text">Silvester und Neujahr haben wir ab 16:00 erst wieder auf</h5>
     </div>
 </div>
 
@@ -341,6 +344,9 @@
                     </div>
                     <div class="col-12">
                         <p id="invalidTimeSign"class="ff-secondary text-primary fw-normal" style="display:none;">Die angegeben Zeit ist ungültig. Bitte lesen Sie unsere Öffnungszeiten nochmal durch und vergewissern Sie sich, dass Sie ein korrektes Datum und eine gültige Uhrzeit angeben</p>
+                    </div>
+                    <div class="col-12">
+                        <p id="invalidHoliday"class="ff-secondary text-primary fw-normal" style="display:none;">Weihnachten haben wir leider geschlossen!</p>
                     </div>
                     <div class="col-12">
                         <p id="invalidInformation"class="ff-secondary text-primary fw-normal" style="display:none;">Ihre Angaben sind unvollständig. Zu den Pflichtangaben gehören: E-Mail, Telefonnummer, Name, Vorname, Anzahl der Personen. Außerdem müssen Sie die AGBs akzeptieren damit eine Reservierung erfolgen kann.</p>
