--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <p id="invalidTimeSign"class="ff-secondary text-primary fw-normal" style="display:none;">Die angegeben Zeit ist ungültig. Bitte lesen Sie unsere Öffnungszeiten nochmal durch und vergewissern Sie sich, dass Sie ein korrektes Datum und eine gültige Uhrzeit angeben</p>
                     </div>
                     <div class="col-12">
-                        <p id="invalidHoliday"class="ff-secondary text-primary fw-normal" style="display:none;">Weihnachten haben wir leider geschlossen!</p>
+                        <p id="invalidHoliday"class="ff-secondary text-primary fw-normal" style="display:none;">Silvester sind wir leider ausgebucht!</p>
                     </div>
                     <div class="col-12">
                         <p id="invalidInformation"class="ff-secondary text-primary fw-normal" style="display:none;">Ihre Angaben sind unvollständig. Zu den Pflichtangaben gehören: E-Mail, Telefonnummer, Name, Vorname, Anzahl der Personen. Außerdem müssen Sie die AGBs akzeptieren damit eine Reservierung erfolgen kann.</p>
