--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
         <h5>Freitag: <strong>12:30-14:30 17:30-23:00</strong></h5>
         <h5>Samstag bis Sonntag: <strong>12:30-23:30</strong></h5>
         <br>
-        <h5 class="red-text">Heiligabend haben wir geschlossen </h5>
-        <h5 class="red-text">Silvester und Neujahr haben wir ab 16:00 erst wieder auf</h5>
+        <h5 class="red-text">Valentinstag ist bereits voll gebucht zwischen 18:00 - 19:30. Wir bitten um Verständnis</h5>
     </div>
 </div>
 
