removed boolean attributes

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+ <!--   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
+-->
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -323,19 +323,19 @@
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
-                            <input type="checkbox" id="isBirthday"> <span>Geburtstag</span>
+                            <input type="hidden" id="isBirthday">
                             <label class="d-none" for="isBirthday">Geburtstag</label>
                         </div>
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
-                            <input type="checkbox" id="isRomanticDate"> <span>Romantisches Date</span>
+                            <input type="hidden" id="isRomanticDate">
                             <label class="d-none" for="isRomanticDate">Romantic Date</label>
                         </div>
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
-                            <input type="checkbox" id="isWindowSeat"> <span>Fensterplatz</span>
+                            <input type="hidden" id="isWindowSeat">
                             <label class="d-none" for="isWindowSeat">Fenster Platz</label>
                         </div>
                     </div>
