--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
                                                                             style='width: 80px;'>
                                     <div class='w-100 d-flex flex-column text-start ps-4'><h5
                                             class='d-flex justify-content-between border-bottom pb-2'><span>Klebereiskuchen</span><span
-                                            class='text-primary'></span></h5><small class='fst-italic'>Süße
+                                            class='text-primary'>2,00€</span></h5><small class='fst-italic'>Süße
                                         Klebreiskuchen, Auswahlarten, Mango, Kokos grüner Tee</small></div>
                                 </div>
                             </div>
